[metadata]
name = bot
version = 1.0.0
description = A multi-functional Discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fb0k/Bronn-DiscordBot
author = Fabio Sousa
author_email = soufabio.df@gmail.com
license = MIT
license_file = LICENSE
